# mats-mess3

./: .gitignore  CLAUDE.md  datasets.md  literature.md  models.md  pyproject.toml  roadmap.md  run.py  run_analysis_only.py  state.md
paper/: main.aux  main.bbl  main.blg  main.out  main.tex  references.bib
paper/sections/: abstract.tex  additional.tex  appendix.tex  background.tex  discussion.tex  introduction.tex  predictions.tex  results.tex  setup.tex
src/: analysis.py  bayes_optimal.py  data.py  mess3.py  model.py  sync_analysis.py  train.py  visualize.py
