[project]
name = "mats-mess3"
version = "0.1.0"
description = "MATS Work Test: Non-ergodic Mess3 transformer experiment"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.0",
    "transformer-lens>=2.0",
    "transformers<5",
    "numpy",
    "matplotlib",
    "scikit-learn",
    "einops",
    "tqdm",
    "jaxtyping",
]

[tool.uv]
python-preference = "managed"

[tool.uv.sources]
torch = { index = "pytorch-cu128", marker = "sys_platform == 'linux'" }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
